# ai_group_project

./: .gitignore  LICENSE  Makefile  README.md  data_sorter.ipynb  environment.yml  pyproject.toml
docs/: YOLOv8 Model Training, Validation, and Testing Report.md  mkdocs.yml
docs/docs/: index.md
notebooks/: base_model_example.ipynb  data_sorter.ipynb  data_sorter_for_model.ipynb  data_sorter_for_unlabeled_data.ipynb  object_detection_yolov8_training.ipynb  unlabaled_images_annotation.ipynb  webcam_caputure.ipynb  yolov8_augmented_model_training_and_evaluation.ipynb  yolov8_unlabeled_data_testing.ipynb
notebooks/Evaluation/: Readme.md  augmented_model_evaluation.ipynb  gcs_data_download.ipynb  initial_model_evaluation.ipynb  test_visualization.ipynb  unlabeled_evaluation.ipynb  unlabeled_visualisation.ipynb
notebooks/Evaluation/Test Metrics/augmented_test_results_csv/: metrics_all.csv  metrics_c.csv  metrics_s.csv  metrics_v.csv
notebooks/Evaluation/Test Metrics/initial_test_metrics_csv/: metrics_all.csv  metrics_c.csv  metrics_s.csv  metrics_v.xls
notebooks/Evaluation/Test Results/augmented_test_predictions_visualizations/: predictions.json
notebooks/Evaluation/Test Results/initial_test_predictions_visualizations/: predictions.json
notebooks/Evaluation/Unlabeled_Prediction_Results/comparison metrics/: overall_comparison_summary.txt  test_set_1_comparison.txt  test_set_2_comparison.txt  test_set_3_comparison.txt  test_set_4_comparison.txt  (+1 more)
notebooks/Evaluation/test_set_3/: predictions.json
notebooks/Evaluation/test_set_5/: summary.txt
(+18 files in other folders)
